z-index fix

--- a/style/gift-style.css
+++ b/style/gift-style.css
@@ -11,7 +11,6 @@ body {
 }
 a {
     margin: 15px 0;
-    
     color: inherit; 
     text-decoration: inherit;
     position: absolute;
@@ -43,6 +42,7 @@ a {
     border-bottom: 1px solid #ccc;
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 .tab{
 
